# modal-runner

./: .gitignore  README.md  launch.sh  modal_ssh.py  modal_ssh_cli.py  pyproject.toml
configs/: _base.yml  default.yml  mrp-eval.yml  mrp-train-test.yml  mrp-train.yml  opendr-eval.yml  sglang.yml
examples/: launch_train_modal_mr.sh  requirements_modal.txt  train_sdar_mtp.sh
modal_runner/: __init__.py  cli.py  modal_app.py  progress.py  queue.py  runner.py
scripts/: download_models.sh
scripts/jobs/: train_kd_diff.sh
scripts/launch/: interactive.sh  lib.sh  noninteractive.sh
src/: app.py  config.py  functions.py  image.py  overrides.py  ssh_keys.py  volumes.py
